@@ -17,6 +17,9 @@ nginx (1.22.0-2) UNRELEASED; urgency=medium
   * d/m/p/http-subs-filter/pcre2.patch: added PCRE2 support
   * d/p/nginx-fix-pidfile.patch: Fix NGINX PIDfile handling to avoid
     SystemD race condition, this fix is backported from Ubuntu (Closes: 876365)
+  * d/apport/source_nginx.py: Add apport hooks for additional bug
+    information gathering, the script is backported from Ubuntu (Closes: 963668)
+  * d/nginx-common.install: Add install rule for apport hooks.
 
   [ Debian Janitor ]
   * Remove constraints unnecessary since buster:
